2006-01-03 Takashi
 PATCH: [ 1390104 ] fix for BUG: [ 1384069 ] Wrapped lines have incorrect column
  Src: MergeEditView.cpp
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h

2006-01-03 Perry
 BUG: [ 1390849 ] cvs trunk MergeChineseSimplified doesn't compile
  Src/Languages: ChineseSimplified: MergeChineseSimplified.rc
 PATCH: [ 1212161 ] Fix handling of \r\n in ByteComparator
  Src: ByteComparator.cpp

2006-01-02 Perry
 PATCH: [ 1383802 ] Cleanup line difference options in Editor-options
  Src: Merge.rc PropEditor.cpp PropEditor.h resource.h
 PATCH: [ 1383802 ] Cleanup line difference options in Editor-options
  Translations
  Src/Language: */Merge*.rc
 PATCH: [ 1391550 ] vbs script to check & optionally merge WinMerge resources
  Src: new CheckTranslations.vbs

2006-01-02 Kimmo
 PATCH: [ 1395474 ] Define WINVER for compiling with VS.net
  Src: StdAfx.h
 PATCH: [ 1395018 ] Small cleanup for CMergeDoc::PrimeTextBuffers()
  Src: DiffList.cpp DiffList.h MergeDoc.cpp

2006-01-02 Perry
 PATCH: [ 1395487 ] Unused local variable in UniStdioFile::DoOpen()
  (Delete unused variable)
  Src/Common: UniFile.cpp
 BUG: [ 1395497 ] Unused local variables in CMergeDoc::GetWordDiffArray()
  (Delete unused variables)
  Src: MergeDocLineDiffs.cpp
 BUG: [ 1395494 ] stringdiffs.cpp / LastChar() returning uninitialized value?
  Src: stringdiffs.cpp

2006-01-02 Kimmo
 Remove unused variable from VSSHelper.cpp/VSSHelper::ReLinkVCProj()
  Src: VSSHelper.cpp

2006-01-02 Perry
 PATCH: [ 1392647 ] Prefix members with m_ in storage_for_plugins
  Src/Common: multiformatText.cpp multiformatText.h
 PATCH: [ 1394717 ] Fix resource.h include for translations
  Src/Languages: */Merge*.rc
  Src/Languages deleted: UpdateAll_resource_h.bat
  Src/Languages deleted: */resource.h (localized versions of resource.h)
 BUG: [ 1395107 ] MergeKorean.rc not compile in cvs trunk
  (resource.h => ..\..\resource.h fix missed Korean somehow)
  Src/Languages/Korean: MergeKorean.rc